--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Serge Borbit <serge.borbit@gmail.com>",
   "dependencies": {
     "async": "*",
+    "commander": "*",
     "canvas": "*",
     "css": "*"
   }
