Finished renaming :) Added vertical cutter. Fixed applySprites logic.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-sewer",
+  "name": "node-tailor",
   "version": "0.0.1",
   "description": "CSS Sprites Generator",
   "author": "Serge Borbit <serge.borbit@gmail.com>",
