README. Add bin and keywords to the package.json.

--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
     "commander": "*",
     "canvas": "*",
     "css": "*"
-  }
+  },
+  "bin": {
+    "tailor": "./bin/tailor"
+  },
+  "keywords": [
+    "sprite",
+    "css"
+  ],
 }
